--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "typescript": "^4.2.3"
   },
   "scripts": {
-    "dev:client": "API_URL=http://localhost:8080 parcel ./packages/client/public/index.html --dist-dir packages/client/dist",
-    "dev:server": "nodemon --watch ./packages/server -e ts --exec npx ts-node ./packages/server/src/index.ts"
+    "start:client": "API_URL=http://localhost:8080 CLIENT_URL=http://localhost:1234 parcel ./packages/client/public/index.html --dist-dir packages/client/dist",
+    "start:server": "nodemon --watch ./packages/server -e ts --exec npx ts-node ./packages/server/src/index.ts"
   }
 }
