--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 dist/
 node_modules
 packages/server/node_modules/
+packages/server/public
 packages/client/node_modules/
 .expo/*
 .env
@@ -20,4 +21,3 @@ yarn-debug.log*
 yarn-error.log*
 node_modules/
 **/public/script.js
-packages/server/public/
