--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,5 +21,8 @@
     "ts-node": "^10.7.0",
     "typescript": "^4.5.4",
     "uuid": "^8.3.2"
+  },
+  "dependencies": {
+    "workerpool": "^6.3.0"
   }
 }
